main.css
@font-face { 
    src: url("fonts/RoslindaleVariable[opsz\,slnt\,wdth\,wght]-Edu.woff2") format("woff2"),
        url('fonts/RoslindaleVariable[opsz\,slnt\,wdth\,wght]-Edu.ttf') format('truetype');

    font-family: 'Roslindale Variable';
    font-style:  normal;
    font-weight: normal;
    }
    /* *{
      border: blue 3px dashed;  
    }   */
    body{
    background-color: #f5f4ef;
    background-image: url('floral-background.svg');
    background-repeat: no-repeat;
    /* overflow: hidden; */
    font-family: 'Roslindale Variable';
}
a{display: inline-block;
    text-decoration: none;
    border: none;
    outline: none;
    cursor: pointer;
    /* padding: 20px 20px; */
    /* margin:60px; */
    /* border-radius: 10px; */
    font-size: 16px;
    font-family: 'Roslindale' 
 }
/* how the page wrapper will appear on mobile */
.page-wrapper{
    width: min(100% - 3rem, 80ch);
    margin-inline: auto;
    margin-top: -5rem;
}
/* how the page wrapper appears on mobile */
@media only screen and (max-width:800px){
    .page-wrapper{
        width: min(100% - 3rem, 80ch);
        margin-inline: auto;
        margin-top: -5rem;
    }
    .hero{
    display: grid;
    /* grid-gap: 25px; */
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
    grid-template-rows: auto auto auto auto;
    grid-template-areas: 
        " . . p p . . "
        " . . p p . . "
        " . . t t . . "
        " g . t t . b "
        " g . t t . b ";
    }
}
/* how the page wrapper appears on desktop */

@media only screen and (min-width:800px){
.hero{
display: grid;
/* grid-gap: 25px; */
grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
grid-template-rows: auto auto auto auto;
grid-template-areas: 
    " . . . . . p p . . . . . "
    " . . . . . p p . . . . . "
    " . . . . t t t t . . . . "
    " g . . . t t t t . . b . "
    " g . . . t t t t . . b . ";
}

.greenblob-long {
    grid-area: g;
    animation: greenblob-long 7s infinite;
    }
    
    @keyframes greenblob-long{
       0%, 100% {
           transform: translateY(70%);
           opacity: 0
       }
       60% {
           transform: translateX(0);
           opacity: 1; 
       }
    }
    }

.pink-blob {
    grid-area: p;
    animation: pink-blob 7s infinite;
    }
        
     @keyframes pink-blob{
        0%, 100% {
            transform: translateY(-70%);
            opacity: 0
        }
        60% {
            transform: translateX(0);
            opacity: 1; 
        }
    }

.blueblob {
    grid-area: b;
    animation: blueblob 7s infinite;
    }
        
    @keyframes blueblob{
        0%, 100% {
            transform: translateY(70%);
            opacity: 0
        }
        60% {
            transform: translateX(0);
            opacity: 1; 
        }
    }
    


.greenblob-long {
grid-area: g;
}

.pink-blob{
grid-area: p;
}

.blueblob {
grid-area: b;
}
.hero-text {
grid-area: t;
}
/* .h2a {
grid-area: a;
}
.h2b {
grid-area: c;
} */

.history {
    margin-top: 2em;
    font-weight: 20;  
    font-size: 2em;
}

.history-text {
    line-height: 1.5em;
}

.languages {
    margin-top: 2em;
    font-weight: 20;  
    font-size: 2em;
}

.language-text {
    line-height: 1.5em;
}

.list-text {
    line-height: 1.5em;
}



/* CSS for the footer */
footer{
    background-color: #63cccf;
      text-align: center;
      /* left: 0%; */
      /* bottom:0px; */
      /* position: fixed; */
      /* z-index: 999; */
      width: 100%;
      /* padding-left: 5%; */


}
/* my info  */
.school {
    padding-top:5%;
    /* padding-right:5%; */
    text-align: center;
    padding-bottom: 0%;
}
/* .course {
    padding-right:5%;
    text-align: right;
    padding-bottom: 0%;
}
.year {
    padding-right:5%;
    text-align: right;
    padding-bottom: 0%;
} */

.contact {
    /* padding-right:5%; */
    text-align: center;
    padding-bottom: 0%;
}
.instagram {
    /* padding-right:5%; */
    text-align: center;
    padding-bottom: 0%;
}
/* .linkedin {
    padding-left:5%;
    text-align: left;
    padding-bottom: 0%;
} */

/* variable font animation */
.hero-text{
    font-weight:20; 
    text-align: center;
    font-size: 8em;
    animation: weightChange1 7s infinite;
}

@keyframes weightChange1 {
    0%, 100%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 200, "slnt" 0;

    }
    50%{

        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 900, "slnt" 0;
    }

}

/* Variations */
.what-font-does {
    margin-top: 2em;
    font-weight: 20;  
    font-size: 2em;
}

.list {
    font-size: 1.5em;
    text-align: left;
}

/* .optical-size {
    font-size: 2.5em;
    text-align: left;
}
.width {
    font-size: 2em;
    text-align: left;
}
.weight {
    font-variation-settings: "wght" 800, "SPAC" 100;
    font-size: 2em;
    text-align: left;
}
.slant {
    font-size: 2em;
    text-align: left;
    font-style: oblique; 
} */


/* characters,glyphs,animations */
.alphabet {
    margin-top: 2em;
    font-weight: 20;  
    font-size: 2em;
}
.line-1 {
    font-weight: 20;  
    text-align:center;
    font-size: 4em;
    grid-area: a;
    animation: weightChange1 7s infinite;
}
@keyframes weightChange1 {
    0%, 100%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 200, "slnt" 0;

    }
    50%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 900, "slnt" 0;
    }

 }

 .line-2 {
    font-weight: 20;  
    text-align:center;
    font-size: 4em;
    grid-area: c;
    animation: weightChange2 7s infinite;
 }
 @keyframes weightChange2 {
    0%, 100%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 900, "slnt" 0;
        }
    50%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 200, "slnt" 0;
     }
}
.line-3 {
    font-weight: 20;  
    text-align:center;
    font-size: 4em;
    animation: weightChange1 7s infinite; 
}
@keyframes weightChange1 {
    0%, 100%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 200, "slnt" 0;

    }
    50%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 900, "slnt" 0;
    }
}
.line-4 {
    font-weight: 20;  
    text-align:center;
    font-size: 4em;
    animation: weightChange2 7s infinite; 
}
@keyframes weightChange2 {
    0%, 100%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 900, "slnt" 0;

    }
    50%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 200, "slnt" 0;
    }
}
@keyframes weightChange3 {
    0%, 100%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 200, "slnt" 0;

    }
    50%{
        font-variation-settings: "opsz" 48, "wdth" 100, "wght" 500, "slnt" 0;
    }
}
.characters {
    margin-top: 2em;
    font-weight: 20;  
    font-size: 2em;
}

.special-characters {
    /* margin-top: 2em; */
    font-weight: 20;  
    text-align:left;
    font-size: 2em;
    animation: weightChange3 7s infinite;
}
/* .glyphs {
    margin-top: 2em;
    font-weight: 20;  
    text-align:center;
    font-size: 4em;
    animation: spin 7s infinite;
} */
/* .circle-glyph {
    margin-top: 0;
    font-weight: 20;  
    text-align:center;
    font-size: 8em;
    animation: spin 7s infinite;
    color: #000000;
} */

.fractions {
    margin-top: 0em;
    font-weight: 20;  
    font-size: 2em;
    text-align: left;
    animation: weightChange2 7s infinite;
}
@keyframes spin {

    0%, 100%{
        fill:rgb(0, 0, 0);
        transform: scale(.5);
        transform-origin: center;
        opacity: .5;
        transform: rotate(50deg);
      }
    50%{
        fill:rgb(0, 0, 0);
        transform: scale(.8);
        transform-origin: center;
    }
}

.shadow {
    background-color:#ac8311;
    width: 25%;
    text-align: center;
    color: #ffff;
    border: none;
    border-radius: 50px;
    padding: 15px 15px;
    font-weight: bold;
    text-transform: uppercase;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

.shadow:hover {
    background-color: #876302;
}

/* .basic-link {
    padding-right: 0em;
    margin-top: 2em;
    color: #664b01;
    font-size: 20px; 
    text-align: center;
    font-variation-settings: "opsz" 48, "wdth" 100, "wght" 600, "slnt" 0;
  }

  .basic-link:hover {
    color: #000000; 
  } */
 

/* variable font that changes on hover */
/* .variable-font{
    font-weight:1 ;
    height:100vh;
    font-size: 10em;
    display:grid;
    place-content: center;
    margin: 0;
    text-align: center;
    font-variation-settings: "wght" 40, "wdth" 0, "XXXX" 1;
    transition: 
        font-weight 500ms,
        font-variation-settings 3s;
}

.variable-font:hover{
    font-weight:500 ;
    height:100vh;
    font-size: 7em;
    display:grid;
    place-content: center;
    margin: 0;
    text-align: center;
    font-variation-settings: "wght" 120, "wdth" 0, "XXXX" 100;
} */

